<resources>
    <string name="app_name">sy95306v2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_station">请选择车站</string>
    <string name="train_type">列车车型：</string>
    <string name="action_date">开行日期：</string>
    <string name="search">查询</string>
    <string name="tip_search">查询结果仅供参考，具体信息请以车站公告为准</string>
    <string name="title_second">按列车车次-时刻查询</string>
    <string name="title_second_new">sy95306 按列车车次-时刻查询</string>
    <string name="train_code">列车车次：</string>
    <string name="first_title">按发到站-时刻余票查询</string>
    <string name="first_title_new">sy95306 按发到站-时刻余票查询</string>
    <string name="start_station_name">出发站</string>
    <string name="end_station_name">终到站</string>
    <string name="all_type">全部</string>
    <string name="selected_date">20180624</string>
    <string name="start_time">出发时间</string>
    <string name="spend_time">运行时间</string>
    <string name="end_time">到达时间</string>
    <string name="filter">过滤</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="G1">G1</string>
    <string name="order">站序</string>
    <string name="station_name">站名</string>
    <string name="remain_time">停留</string>
    <string name="arrive_time">到时</string>
    <string name="leave_time">发时</string>
    <string name="string_return">返回</string>
    <string name="string_refresh">刷新</string>
    <string name="d7412">D7412</string>
    <string name="shen_yang_bei">沈阳北</string>
    <string name="hint_input_station">中文/拼音/首字母</string>
    <string name="bei_jing">北京</string>
    <string name="price_test_shangwu">商务座:2724.0元</string>
    <string name="price_test_yideng">一等座:270.5元</string>
    <string name="price_test_erdeng">二等座:181.5元</string>
    <string name="init_data">初始化中，请稍候…</string>
    <string name="textView_loading">加载中，请稍候</string>
    <string name="station_start">始</string>
    <string name="station_pass">过</string>
    <string name="station_end">终</string>
    <string name="save_image">保存图片</string>
    <string name="save">保存</string>
    <string name="share_image">分享图片</string>
    <string name="share">分享</string>
    <string name="shen_yang">沈阳95306</string>
    <string name="shen_yang2">沈阳953062</string>
    <string name="guang_zhou">广铁12306</string>
    <string name="open_net_work">请打开网络连接</string>
    <string name="detail_net_work">应用需要连接网络查询，请打开网络</string>
    <string name="updating">正在更新中</string>
    <string name="isUpdating">是否更新</string>
    <string name="update_tip">获取最新、最全的车站列表</string>
    <string name="all_station_count">车站总数：%1$d</string>
    <string name="current_station_count">已更新数量：%1$d</string>
    <string name="finish_update">更新完成</string>
    <string name="query_date">日期:</string>
    <string name="from_station">出发站：</string>
    <string name="to_station">目的站</string>
    <string name="query">查询</string>
    <string name="show_title">%1$s %2$s-%3$s</string>
    <string name="show_time">%1$s~%2$s  %3$s</string>
    <string name="title_train_type">列车类型</string>
    <string name="all_price">%1$s %2$s %3$s %4$s</string>
    <string name="delay_status">状态：暂无正晚点信息</string>
    <string name="stationNum">序号</string>
    <string name="stationName">车站</string>
    <string name="endTime">到时</string>
    <string name="startTime">发车</string>
    <string name="stayTime">停留</string>
    <string name="arriveTime">实际时间</string>
    <string name="shang_hai">上海12306</string>
    <string name="trainCode">车次</string>
    <string name="ticketPrice">417起</string>
    <string name="needTime">6小时18分</string>
    <string name="fromStation">苍南</string>
    <string name="rw">软卧:%1$s</string>
    <string name="yw">硬卧:%1$s</string>
    <string name="rz">软座:%1$s</string>
    <string name="yz">硬座:%1$s</string>
    <string name="wz">无座:%1$s</string>
    <string name="yu_piao_tip">硬座包括二等座，软座包括一等座</string>
    <string name="zzcx">中转查询</string>
    <string name="ic_pass_code">验证码</string>
    <string name="select_station">选择车站</string>
    <string name="select_arrive">接站</string>
    <string name="select_leave">候乘</string>
    <string name="startStation">始发</string>
    <string name="endStation">终到</string>
    <string name="show_time_leave">发时</string>
    <string name="show_time_arrive">到时</string>
    <string name="show_place_arrive">出站口</string>
    <string name="show_place_leave">检票口</string>
    <string name="show_status">状态</string>
    <string name="expect_arrive">图定到站</string>
    <string name="expect_leave">图定发站</string>
    <string name="cd_late">正晚点</string>
    <string name="check">校验</string>
    <string name="zhengDian">正点</string>
    <string name="expect_arrive_time">预计到达时间</string>
    <string name="wan_dian">晚点</string>


</resources>
