<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/select_station" />

        <Spinner
            android:id="@+id/spinner_cd_station"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_search"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggle_button_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/select_leave"
            android:textOn="@string/select_arrive" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trainCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:text="@string/trainCode" />

        <TextView
            android:id="@+id/startStation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:text="@string/startStation" />

        <TextView
            android:id="@+id/endStation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:text="@string/endStation" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_horizontal"
            android:text="@string/show_time_leave" />

        <TextView
            android:id="@+id/showPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center_horizontal"
            android:text="@string/show_place_arrive" />

        <TextView
            android:id="@+id/showStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:text="@string/show_status" />


    </LinearLayout>

    <ListView
        android:id="@+id/listView_cd_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>