<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textView_train_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/train_code"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="D18" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_search"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stayTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:text="@string/stayTime" />

        <TextView
            android:id="@+id/stationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="center_horizontal"
            android:text="@string/stationName" />

        <TextView
            android:id="@+id/arriveTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center_horizontal"
            android:text="@string/expect_arrive" />

        <TextView
            android:id="@+id/leave_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center_horizontal"
            android:text="@string/expect_leave" />

        <TextView
            android:id="@+id/showStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center_horizontal"
            android:text="@string/cd_late" />

    </LinearLayout>


    <ListView
        android:id="@+id/listView_train_code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>